tests/coverage/misc/fail/early_errors/010_super_outside_method.js
// ECMA-262 §13.3.7.1 — SuperCall and SuperProperty outside a class
// method / constructor are SyntaxErrors.
super.foo();
